apps/base/bichon/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bichon
  labels:
    app.kubernetes.io/name: bichon
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
