apps/base/bichon/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bichon
  labels:
    app.kubernetes.io/name: bichon
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bichon
  namespace: bichon
  labels:
    app.kubernetes.io/name: bichon
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 15630
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bichon
  policyTypes:
    - Ingress
